# card

./: .gitignore  Cargo.toml
crates/card/: Cargo.toml
crates/card/src/: category.rs  definition.rs  hooks.rs  lib.rs  world.rs
crates/i18n/: Cargo.toml
crates/i18n/src/: lib.rs
crates/player/: Cargo.toml
crates/rule/: Cargo.toml
crates/table/: Cargo.toml
